--- a/myProjects/css/layouts/case 1/case-1.html
+++ b/myProjects/css/layouts/case 1/case-1.html
@@ -35,7 +35,57 @@
         bottom: 0;
         right: 0;
     }
+    body>div{
+       background: white;
+        width: 150px;
+        height: 150px;
+        position: absolute;
+        z-index: 2;
 
+    }
+    body>div:nth-child(5){
+        top:0;
+        left: 0;
+        border-bottom-right-radius: 100%;
+    }
+    body>div:nth-child(6){
+        top:0;
+        right: 0;
+        border-bottom-left-radius: 100%;
+    }
+    body>div:nth-child(7){
+        bottom:0;
+        left: 0;
+        border-top-right-radius: 100%;
+    }
+    body>div:nth-child(8){
+        bottom:0;
+        right: 0;
+        border-top-left-radius: 100%;
+    }
+
+    body>div:nth-child(9){
+        width: 200px;
+        height: 200px;
+        margin: auto;
+        left:0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+    }
+    div>div{
+        width: 100px;
+        height: 100px;
+        background: red;
+        border-radius: 100%;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        margin: auto;
+
+    }
 </style>
 <body>
 
@@ -43,6 +93,18 @@
 <section></section>
 <section></section>
 <section></section>
+
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+
+
+<div>
+    <div>
+
+    </div>
+</div>
 
 </body>
 </html>
