--- a/myProjects/css/layouts/case 1/case-1.html
+++ b/myProjects/css/layouts/case 1/case-1.html
@@ -73,7 +73,7 @@
         right: 0;
         bottom: 0;
     }
-    div>div{
+   body>div>div{
         width: 100px;
         height: 100px;
         background: red;
@@ -84,15 +84,73 @@
         bottom: 0;
         top: 0;
         margin: auto;
-
+    }
+    body>div:nth-child(10){
+        top: 0;
+        right: 0;
+        left: 0;
+        margin: auto;
+        border-bottom-left-radius: 108px;
+        border-bottom-right-radius: 108px;
+        height: 100px;
+        width: 200px;
+    }
+    body>div:nth-child(11){
+        bottom: 0;
+        right: 0;
+        left: 0;
+        margin: auto;
+        border-top-left-radius: 108px;
+        border-top-right-radius: 108px;
+        height: 100px;
+        width: 200px
+    }
+    section>div{
+        width: 200px;
+        height: 200px;
+        background: white;
+        position: absolute;
+        margin: auto;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        border-radius: 100%;
+    }
+    section>div>div{
+        width: 70px;
+        height: 70px;
+        background: red;
+        position: absolute;
+        margin: auto;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
     }
 </style>
 <body>
 
-<section></section>
-<section></section>
-<section></section>
-<section></section>
+<section>
+    <div>
+        <div></div>
+    </div>
+</section>
+<section>
+    <div>
+        <div></div>
+    </div>
+</section>
+<section>
+    <div>
+        <div></div>
+    </div>
+</section>
+<section>
+    <div>
+        <div></div>
+    </div>
+</section>
 
 <div></div>
 <div></div>
@@ -105,6 +163,9 @@
 
     </div>
 </div>
+
+<div></div>
+<div></div>
 
 </body>
 </html>
