case 2 header updated

--- a/myProjects/css/layouts/case 2/index.html
+++ b/myProjects/css/layouts/case 2/index.html
@@ -2,28 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Case 2</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Case 2</title><link href="../../layouts/case%201/css/normalize.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+
+
+    <style>
+        header{
+            position: relative;
+            height: 80px;
+            box-shadow: -2px 6px 9px -4px #917a7a;
+        }
+        header>img{
+            width: 213px;
+            margin: 18px;
+        }
+        header>ul{
+            position: absolute;
+            right: 30px;
+            bottom: 4px;
+            list-style: none;
+            font-family: 'Noto Sans Mono', monospace;
+            font-size: 20px;
+        }
+        header>ul>li{
+            display: inline-block;
+            padding: 0 10px 0 10px;
+        }
+        header>ul>li:hover{
+            cursor: pointer;
+            color: red;
+
+        }
+
+    </style>
 </head>
 <body>
 <header>
-    <img src="../../layouts/case%202/images/ijselogo.png" alt="">
-
+    <img alt="" src="../../layouts/case%202/images/ijselogo.png">
 
     <ul>
-        Home
-        Service
-        Contact
-        About Us
+        <li>Home</li>
+        <li> Service</li>
+        <li>Contact</li>
+        <li>About Us</li>
+
     </ul>
 
 </header>
 <main>
 
     <nav>
-        Home
-        Service
-        Contact
-        About Us
+        <li>Home</li>
+        <li> Service</li>
+        <li>Contact</li>
+        <li>About Us</li>
     </nav>
     <section>
         <section>
@@ -31,28 +66,36 @@
             <div></div>
             <div></div>
         </section>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis fuga fugit
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis
+            fuga fugit
             harum laboriosam, laudantium libero molestias nostrum obcaecati perferendis quaerat tempore
             ullam ut veritatis voluptate.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis fuga fugit
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis
+            fuga fugit
             harum laboriosam, laudantium libero molestias nostrum obcaecati perferendis quaerat tempore
             ullam ut veritatis voluptate.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis fuga fugit
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis
+            fuga fugit
             harum laboriosam, laudantium libero molestias nostrum obcaecati perferendis quaerat tempore
             ullam ut veritatis voluptate.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis fuga fugit
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis
+            fuga fugit
             harum laboriosam, laudantium libero molestias nostrum obcaecati perferendis quaerat tempore
             ullam ut veritatis voluptate.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis fuga fugit
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis
+            fuga fugit
             harum laboriosam, laudantium libero molestias nostrum obcaecati perferendis quaerat tempore
             ullam ut veritatis voluptate.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis fuga fugit
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis
+            fuga fugit
             harum laboriosam, laudantium libero molestias nostrum obcaecati perferendis quaerat tempore
             ullam ut veritatis voluptate.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis fuga fugit
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis
+            fuga fugit
             harum laboriosam, laudantium libero molestias nostrum obcaecati perferendis quaerat tempore
             ullam ut veritatis voluptate.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis fuga fugit
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, assumenda delectus dignissimos esse facilis
+            fuga fugit
             harum laboriosam, laudantium libero molestias nostrum obcaecati perferendis quaerat tempore
             ullam ut veritatis voluptate.</p>
 
@@ -61,7 +104,7 @@
 
 </main>
 <footer>
-<p>Developed by IJSE</p>
+    <p>Developed by IJSE</p>
 </footer>
 </body>
 </html>
