--- a/myProjects/css/layouts/case 1/index.html
+++ b/myProjects/css/layouts/case 1/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Case 1</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="../../layouts/case%201/css/normalize.css" rel="stylesheet">
 </head>
 <style>
