--- a/myProjects/css/layouts/case 2/index.html
+++ b/myProjects/css/layouts/case 2/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Case 2</title><link href="../../layouts/case%201/css/normalize.css" rel="stylesheet">
+    <title>Case 2</title>
+    <link href="../../layouts/case%201/css/normalize.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
