--- a/myProjects/css/layouts/case 4/index.html
+++ b/myProjects/css/layouts/case 4/index.html
@@ -4,14 +4,67 @@
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Case 4</title>
     <link href="../../layouts/case%204/css/normalize.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com" rel="preconnect"/>
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet"/>
 
-
-    <title>CSS Sticky Position</title>
 </head>
+<style>
+    body > section {
+        height: 100vh;
+        font-size: 100px;
+        font-family: 'Nunito', sans-serif;
+    }
+    #sec1 {
+        background-color: rgb(255, 255, 255);
+    }
+
+    #sec2 {
+        background-color: rgb(92, 183, 255);
+    }
+
+    #sec3 {
+        background-color: rgb(95, 89, 81);
+    }
+
+    #sec4 {
+        background-color: rgb(241, 98, 41);
+    }
+
+    #top1 {
+        background-color: rgb(255, 51, 30);
+    }
+
+    #top2 {
+        background-color: rgb(0, 69, 131);
+    }
+
+    #top3 {
+        background-color: rgb(41, 41, 37);
+    }
+
+    #top4 {
+        background-color: rgb(124, 50, 45);
+    }
+    body > section > div:nth-of-type(1) {
+        height: 50px;
+        font-weight: bold;
+        line-height: 50px;
+        position: sticky;
+        top: 0;
+        font-size: 25px;
+        padding-left: 15px;
+        color: white;
+    }
+
+    body > section > div:nth-of-type(2) {
+        text-align: center;
+        line-height: 100vh;
+        font-weight: bold;
+    }
+</style>
 <body>
 <section id="sec1">
     <div id="top1">Card 1</div>
