--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,127 +1,136 @@
-html, body {
-    width: 100%;
-    height: 100%;
+*{
     margin: 0;
-    background: #000000;
-}
+    padding: 0;
+    box-sizing: border-box;
 
-.contact-header {
-    position: relative;
-    bottom: 20px;
-    top: 20px;
 
 }
 
-.contact-header h2 {
+.container{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 0;
+    background-color: #101010;
+    font-family: 'Montserrat', sans-serif;
+
+}
+.container h2{
     font-size: 40px;
-    font-weight: bold;
-    margin-bottom: 5px;
+    margin-top: 90px;
+    margin-bottom: 3px;
     padding: 0 15px;
     letter-spacing: 0.13em;
-    text-align: center;
     color: white;
-}
 
-.line {
+}
+.line{
     width: 10%;
     height: 3px;
-    position: absolute;
-    left: 44.5%;
     border: 0 none;
     background-color: #24987E;
     margin-bottom: 10px;
 
-}
 
-.contact-header p {
+}
+.container p{
     color: #848484;
     text-align: center;
-    margin-top: 10px;
-    padding-top: 10px;
     line-height: 1.6em;
     letter-spacing: 0.03em;
 
 }
-
-
-.container {
-    margin:  70px auto;
-    position: relative;
-    width: 50%;
-    height: 10px;
-    padding-bottom: 30%;
-    background: #2C2C2C;
-    border: 10px solid black;
+.box-container{
+    padding-top: 20px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-
-.slide-img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-.slide-img img {
-    width: 100%;
-    height: 100%;
-}
-
-#i1, #i2, #i3 {
-    display: none;
-}
-
-.pre, .nxt {
-    width: 12%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    background: rgba(88, 88, 88, .4);
-    z-index: 99;
-    cursor: pointer;
-}
-
-.pre {
-    left: 0;
-}
-
-.nxt {
-    right: 0;
-}
-
-.nav {
-    width: 100%;
-    height: 11px;
-    bottom: 12%;
-    position: absolute;
-    text-align: center;
-    z-index: 99;
-}
-
-.dots {
-    top: -5px;
-    width: 18px;
-    height: 18px;
-    margin: 0 4px;
-    position: relative;
-    border-radius: 50%;
+.cards{
+    width: 20%;
+    border-radius: 5px;
+    margin: 40px;
+    box-shadow: 2px 2px 10px black;
     display: inline-block;
-    background: #848484;
+    color: white;
+    background-color: #1C1C1C ;
+
 
 }
-
-.slide-img {
-    z-index: -1;
+.image img{
+    width: 100%;
+    background-color: #848484;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.title{
+    text-align: center;
+    padding: 5px;
+}
+.title h1{
+    margin: 2px;
+    font-size: 20px;
 }
 
-#i1:checked ~ #one,
-#i2:checked ~ #two,
-#i3:checked ~ #three {
-    z-index: 9;
+.des{
+    text-align: center;
+    padding: 4px;
 }
 
-#i1:checked ~ .nav #dot1,
-#i2:checked ~ .nav #dot2,
-#i3:checked ~ .nav #dot3 {
+.btn{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 40px;
     background: #24987E;
+    color: white;
+    width: 140px;
+    height: 40px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 14px;
+}
+.btn a{
+    text-decoration: none;
+    color: white;
+}
+.btn:hover{
+
+    border: 1px solid  #24987E;
+    transition: 0.5s;
+    background: #0c6b56;
 }
 
+@media (max-width: 880px) {
+    .container h2{
+        margin-top: 30px;
+        margin-bottom: 5px;
+        font-size: 30px;
 
+    }
+    .container p{
+        font-size: 12px;
+    }
+    .box-container{
+        flex-direction: column;
+        width: 100%;
+        padding-top: 20px;
+        margin-bottom: 30px;
+
+    }
+    .cards{
+        min-width: 350px;
+        margin: 10px auto;
+    }
+    .container h2:after{
+        left: 43%;
+        top: 11.5%;
+        width: 13%;
+
+    }
+
+}
