--- a/assets/css/landingPage.css
+++ b/assets/css/landingPage.css
@@ -1,4 +1,36 @@
-body>section {
+
+
+
+body>div{
+    position: fixed;
+    background-color: #1C1C1C;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 2;
+}
+body>div>div{
+    width: 300px;
+    height: 300px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    background: url("../gif/Loader.gif");
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+
+
+}
+
+
+
+
+
+.main {
     background-color: #101010;
     color: white;
     background-image: url("../images/cover.png");
@@ -96,6 +128,7 @@ body>section {
 
 
 }
+
 
 #contact-button:hover {
     cursor: pointer;
