--- a/assets/css/landingPage.css
+++ b/assets/css/landingPage.css
@@ -135,7 +135,32 @@ body>div>div{
     0 5px 30px 0 #24987E inset, 0 5px 30px 0 #24987E;
     text-shadow: 0 0 2px #24987E, 0 0 2px #24987E;
 }
+span{
+  position: relative;
+    color: #222;
 
+}
+span:before{
+    content: attr(data-set);
+    position: absolute;
+    color: #fff;
+    width: 100px;
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 4px solid #fff;
+    animation: animate 6s linear infinite;
+    filter: drop-shadow(0 0 20px #fff) drop-shadow(0 0 50px #fff);
+}
+@keyframes animate {
+0%,10%,100%{
+    width: 0;
+}70%,90%{
+    width: 100%;
+ }
+
+
+
+}
 
 @media (max-width: 980px) {
     #my-name {
