--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -123,16 +123,16 @@ body {
     width: 85%;
 }
 
-.skill-php{
+.skill-spring{
     width: 80%;
 }
-.skill-node{
-    width: 70%;
+.skill-springboot{
+    width: 88%;
 }
 .skill-java{
     width: 90%;
 }
-.skill-python{
+.skill-node{
     width: 65%;
 }
 .skill-close.skill-list{
