--- a/assets/css/aboutMe.css
+++ b/assets/css/aboutMe.css
@@ -1,5 +1,6 @@
 body {
-    width: 100%;
+  /*  width: 500px;
+    height: 100%;*/
     background-color: #1C1C1C;
     color: white;
     position: relative;
@@ -7,7 +8,7 @@ body {
 }
 
 .container {
-    width: 100%;
+    width: 100vw;
     margin: auto;
 
 }
@@ -17,16 +18,16 @@ body {
     height: 420px;
     background-color: #101010;
     position: absolute;
-    left: 20%;
-    top: 45%;
+    margin-left: 360px;
+    margin-top: 150px;
+
     background-image: url("../images/aboutMe.png");
     background-size: 390px 430px;
 
 
 }
-
 .about-me {
-    position: relative;
+    position: absolute;
     left: 50%;
     top: 190px;
 }
@@ -71,17 +72,14 @@ body {
 
 #download-cv-button:hover {
     cursor: pointer;
-    box-shadow: 0 5px 30px 0 #24987E inset, 0 5px 30px 0 #24987E,
-    0 5px 30px 0 #24987E inset, 0 5px 30px 0 #24987E;
-    text-shadow: 0 0 2px #24987E, 0 0 2px #24987E;
+    transform: scale(1.1);
 }
 
-@media (max-width: 880px) {
+@media (max-width: 1374px) {
     #cover-box {
-
-
         margin-top: 60px;
-        left: 120px;
+        margin-left: 22%;
+        margin-right: 22%;
         width: 250px;
         height: 300px;
         background-size: 280px 300px;
@@ -91,7 +89,8 @@ body {
         float: none;
         text-align: center;
         position: absolute;
-        left: 7%;
+        left: 10%;
+        right:10%;
         margin-top: 170px;
 
 
