--- a/assets/css/landingPage.css
+++ b/assets/css/landingPage.css
@@ -131,9 +131,7 @@ body>div>div{
 
 #contact-button:hover {
     cursor: pointer;
-    box-shadow: 0 5px 30px 0 #24987E inset, 0 5px 30px 0 #24987E,
-    0 5px 30px 0 #24987E inset, 0 5px 30px 0 #24987E;
-    text-shadow: 0 0 2px #24987E, 0 0 2px #24987E;
+    transform: scale(1.1);
 }
 span{
   position: relative;
